# simple-web-stack

./: .actrc  .gitignore  BACKEND-PLAN.md  CLAUDE.md  FRONTEND-PLAN.md  PLAN.md  README.md  TEST_RESULTS.md  deno.json  docker-compose.override.yml  docker-compose.yml
.cursor/rules/: agentic-iterative-development.mdc  automated-testing-policy.mdc  backend-api-implementation.mdc  backend-principles.mdc  deno-dax-shell-scripting.mdc  deno-fresh-fullstack-guide.mdc  development-phase-management.mdc  docker-fresh-integration.mdc  fresh-v2-idioms.mdc  fresh-v2-migration-guide.mdc  parallel-testing-database-strategy.mdc  simple-web-stack-architecture.mdc
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .clippy.toml  .env.example  Cargo.toml  Dockerfile  README.md  deno.json  deny.toml  integration_test.ts  rustfmt.toml  test_runner.ts
backend/.cargo/: config.toml
backend/benches/: health_check_bench.rs
backend/migrations/: 001_create_todos.sql
backend/scripts/: dev-setup.ts
backend/src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs
backend/src/config/: mod.rs
backend/src/handlers/: health.rs  mod.rs  todos.rs
backend/src/models/: todo.rs
backend/tests/: health_check.rs  health_check_integration_test.rs  pagination.rs  search_integration.rs  tasks_api.rs  tasks_concurrency.rs  tasks_edge_cases.rs  tasks_operational.rs  tasks_performance.rs  tasks_security.rs
backend/tests/common/: mod.rs
docs/: fresh-2-code.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  auth.ts  deno.json  dev.ts  main.ts  types.ts  utils.ts
frontend/components/: AddTaskForm.tsx  Button.tsx  SearchForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/islands/: AddTaskForm.tsx  AddTaskFormIsland.tsx  LoginForm.tsx  RegisterForm.tsx  TaskList.tsx  TodoApp.tsx
frontend/routes/: _app.tsx  index.tsx  login.tsx  register.tsx  tasks.tsx
frontend/routes/api/tasks/: [id].tsx  index.tsx
frontend/tests/: TodoApp_test.tsx  components_test.ts
plans/: FRONTEND-PLAN.md  HOT-RELOADING.md  PAGINATION.md
scripts/: check-coordination-progress.ts  run-backend-ci-locally.sh  run-backend-ci-locally.ts  run-ci.ts  run-frontend-ci-locally.sh  run-frontend-ci-locally.ts  task-cli.ts  test-backend.ts  test-frontend-loop.ts  test-infinite-loop.ts  test-pagination-search.ts
