# Backend Service
# 
# Test Execution Strategy:
# - Unit tests: Run in parallel (cargo test --lib -- --test-threads=0)
# - Integration tests: Run sequentially (cargo test --test '*' -- --test-threads=1)
# - All tests: Use custom script for optimal execution

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Update with `cargo upgrade -i allow && cargo update`
[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono", "macros"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.12.18", features = ["json"] }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["mysql"] }
once_cell = "1"
futures = "0.3"
